--- a/externals/ut_catch/CMakeLists.txt
+++ b/externals/ut_catch/CMakeLists.txt
@@ -1,19 +1,22 @@
 ﻿cmake_minimum_required (VERSION 3.19)
 
-IF(DEFINED sub_dir_tree_val)
-	MESSAGE_TREEVIEW("Catch2")
-ENDIF()
+set(target_name "UT_CATCH")
 
-add_library(UT_CATCH STATIC)
 
-target_include_directories(UT_CATCH PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/inc")
-target_sources(UT_CATCH 
-	PUBLIC "${CMAKE_CURRENT_LIST_DIR}/inc/catch.hpp"
+message(STATUS "    -> ${target_name}")
+add_library(${target_name} STATIC)
+
+target_include_directories(${target_name}
+ PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/inc"
 )
 
-target_sources(UT_CATCH
-	PRIVATE "${CMAKE_CURRENT_LIST_DIR}/inc/ut_catch.hpp"
-	PRIVATE "${CMAKE_CURRENT_LIST_DIR}/src/ut_catch.cpp"
+target_sources(${target_name} 
+ PUBLIC "${CMAKE_CURRENT_LIST_DIR}/inc/catch.hpp"
+)
+
+target_sources(${target_name}
+ PRIVATE "${CMAKE_CURRENT_LIST_DIR}/inc/ut_catch.hpp"
+ PRIVATE "${CMAKE_CURRENT_LIST_DIR}/src/ut_catch.cpp"
 )
 
 
