working on Publisher
working on Publisher

.

.

working on Publisher

working on Publisher

working on Publisher

--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -5,4 +5,5 @@ set(TEST_MAIN_CPP "${CMAKE_CURRENT_LIST_DIR}/tst_main/tst_main.cpp" CACHE INTERN
 add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/CRC")
 add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/BLOB")
 add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Callback")
+add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Publisher")
 
